[package]
name = "http_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
log = ["dep:pretty_env_logger", "dep:log"]

[dependencies]
log = { version = "0.4.20", optional = true }
num_enum = "0.7.1"
pretty_env_logger = { version = "0.5.0", optional = true }
